# useful

./: .gitconfig  README.md  pyproject.toml
.github/workflows/: lint.yaml
django/: django_fresher_qa.md  django_fresher_qa_detailed.md
django/workflow/: django-git-workflow.md
emoji/: emoji-list.md
git/: add.html  basics_git.md  ciao.ipynb  git_add_commit.md  git_advanced.md  git_checkout.md  git_status.md  hello.py  undo_commit.md
git/flood_spam/: ciao.ipynb  hello.py
git/summary/: basics_git.md  git_add_commit.md  git_advanced.md  git_status.md
ip_wi-fi/: front_LAN_access.md
linux/: useful_commands.md
pre-commit/: README.md  lint.yaml
vscode/: docs_plugin.md
