[tool.poetry]
name = "useful"
version = "0.1.0"
description = ""
authors = ["Siracenco Serghei <108734530+SiracencoSerghei@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
